--- a/help/index.html
+++ b/help/index.html
@@ -13,6 +13,8 @@
    <main>
         <h1>Ayuda</h1>
         <h2>Contactanos por correo a <a href="mailto:info@carit.love">info@carit.love</a></h2>
+
+        <h2>Para eliminar tu cuenta y datos escribenos a <a href="mailto:info@carit.love">info@carit.love</a></h2>
    </main>
    <nav class="footer">
     <div>
