--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
    <main class="hero">
         <img class="logo" src="logo.png" alt="Carit | ¡La revolución amorosa que cambiará tu vida para siempre!">
-        <a href="#"><img class="appicon" src="google-play.svg" alt="Download Carit Google Play Android">Descargar</a>
+        <a href="https://play.google.com/store/apps/details?com.juantorrens.carit"><img class="appicon" src="google-play.svg" alt="Download Carit Google Play Android">Descargar</a>
+        <a href="#"><img class="appleicon" src="apple.svg" alt="Download Carit App Store Apple">Descargar</a>
    </main>
    <nav class="footer">
     <div>
