--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,20 +9,24 @@
     <link rel="stylesheet" href="./css/main.css">
     <title>Carit</title>
 </head>
+
 <body>
-   <main class="hero">
+    <main class="hero">
         <img class="logo" src="logo.png" alt="Carit | ¡La revolución amorosa que cambiará tu vida para siempre!">
-        <a href="https://play.google.com/store/apps/details?com.juantorrens.carit"><img class="appicon" src="google-play.svg" alt="Download Carit Google Play Android">Descargar</a>
-        <a href="#"><img class="appleicon" src="apple.svg" alt="Download Carit App Store Apple">Descargar</a>
-   </main>
-   <nav class="footer">
-    <div>
-        <a href="./privacy">Política de Privacidad</a>
-        <p>|</p>
-        <a href="./conditions">Condiciones de Uso</a>
-        <p>|</p>
-        <a href="./help">Ayuda</a>
-    </div>
-   </nav>
+        <div>
+            <a href="https://play.google.com/store/apps/details?com.juantorrens.carit"><img class="appicon" src="google-play.svg" alt="Download Carit Google Play Android"></a>
+            <a href="#"><img class="appicon" src="apple.svg" alt="Download Carit App Store Apple"></a>
+        </div>
+    </main>
+    <nav class="footer">
+        <div>
+            <a href="./privacy">Política de Privacidad</a>
+            <p>|</p>
+            <a href="./conditions">Condiciones de Uso</a>
+            <p>|</p>
+            <a href="./help">Ayuda</a>
+        </div>
+    </nav>
 </body>
+
 </html>
