--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <main class="hero">
         <img class="logo" src="logo.png" alt="Carit | ¡La revolución amorosa que cambiará tu vida para siempre!">
         <div>
-            <a target="_blank" href="https://play.google.com/store/apps/details?com.juantorrens.carit"><img class="appicon" src="google-play.svg" alt="Download Carit Google Play Android"></a>
-            <a target="_blank" href="https://forms.gle/HjRFYsz8qsAheEFW7"><img class="appicon" src="apple.svg" alt="Download Carit App Store Apple"></a>
+            <a target="_blank" href="https://play.google.com/store/apps/details?com.juantorrens.carit"><img width="20px" class="appicon" src="google-play.svg" alt="Download Carit Google Play Android"></a>
+            <a target="_blank" href="https://forms.gle/HjRFYsz8qsAheEFW7"><img width="20px" class="appicon" src="apple.svg" alt="Download Carit App Store Apple"></a>
         </div>
     </main>
     <nav class="footer">
