--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="./favicon.png">
     <link rel="stylesheet" href="./css/main.css">
-    <title>Carit</title>
+    <title>Carit | ¡La revolución amorosa que cambiará tu vida!</title>
+    <meta name="description" content="Obtén los mejores consejos románticos con Carit, la aplicación especializada en brindar asesoramiento amoroso. Descubre cómo mejorar tus relaciones y conquistar a tu pareja. ¡Descarga la app ahora!">
+    <meta name="keywords" content="Carit, consejos románticos, asesoramiento amoroso, app de consejos de amor, relaciones, conquistar pareja">
+    <meta name="language" content="Spanish">
+    <meta http-equiv="Content-Language" content="es">
+    <meta name="author" content="Carit">
+    <meta property="og:title" content="Carit | ¡La revolución amorosa que cambiará tu vida!">
+    <meta property="og:description" content="Obtén los mejores consejos románticos con Carit, la aplicación especializada en brindar asesoramiento amoroso. Descubre cómo mejorar tus relaciones y conquistar a tu pareja. ¡Descarga la app ahora!">
+    <meta property="og:image" content="https://carit.love/logo.png">
+    <meta property="og:url" content="https://carit.love/">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Carit | ¡La revolución amorosa que cambiará tu vida!">
+    <meta name="twitter:description" content="Obtén los mejores consejos románticos con Carit, la aplicación especializada en brindar asesoramiento amoroso. Descubre cómo mejorar tus relaciones y conquistar a tu pareja. ¡Descarga la app ahora!">
+    <meta name="twitter:image" content="https://carit.love/logo.png">    
 </head>
 
 <body>
