--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="./favicon.png">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./main.css">
     <title>Carit | ¡La revolución amorosa que cambiará tu vida!</title>
     <meta name="description" content="Obtén los mejores consejos románticos con Carit, la aplicación especializada en brindar asesoramiento amoroso. Descubre cómo mejorar tus relaciones y conquistar a tu pareja. ¡Descarga la app ahora!">
     <meta name="keywords" content="Carit, consejos románticos, asesoramiento amoroso, app de consejos de amor, relaciones, conquistar pareja">
@@ -34,11 +34,11 @@
     </main>
     <nav class="footer">
         <div>
-            <a href="./privacy">Política de Privacidad</a>
+            <a href="./privacy/">Política de Privacidad</a>
             <p>|</p>
-            <a href="./conditions">Condiciones de Uso</a>
+            <a href="./conditions/">Condiciones de Uso</a>
             <p>|</p>
-            <a href="./help">Ayuda</a>
+            <a href="./help/">Ayuda</a>
         </div>
     </nav>
 </body>
