--- a/help/index.html
+++ b/help/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="../favicon.png">
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/help.css">
+    <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="../help.css">
     <title>Carit | Ayuda</title>
 </head>
 <body>
@@ -20,9 +20,9 @@
     <div>
         <a href="../">Volver</a>
         <p>|</p>
-        <a href="./privacy">Política de Privacidad</a>
+        <a href="../privacy/">Política de Privacidad</a>
         <p>|</p>
-        <a href="./conditions">Condiciones de Uso</a>
+        <a href="../conditions/">Condiciones de Uso</a>
     </div>
    </nav>
 </body>
