--- a/privacy/index.html
+++ b/privacy/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="../favicon.png">
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/privacy.css">
+    <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="../privacy.css">
     <title>Carit | Política de Privacidad</title>
 </head>
 
@@ -111,9 +111,9 @@
         <div>
             <a href="../">Volver</a>
             <p>|</p>
-            <a href="./help">Ayuda</a>
+            <a href="../help/">Ayuda</a>
             <p>|</p>
-            <a href="./conditions">Condiciones de Uso</a>
+            <a href="../conditions/">Condiciones de Uso</a>
         </div>
     </nav>
 </body>
