--- a/help/index.html
+++ b/help/index.html
@@ -1,29 +1,54 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="../favicon.png">
     <link rel="stylesheet" href="../main.css">
-    <link rel="stylesheet" href="../help.css">
+    <link rel="stylesheet" href="../privacy.css">
     <title>Carit | Ayuda</title>
 </head>
-<body>
-   <main>
-        <h1>Ayuda</h1>
-        <h2>Contactanos por correo a <a href="mailto:info@carit.love">info@carit.love</a></h2>
 
-        <h2>Para eliminar tu cuenta y datos escribenos a <a href="mailto:info@carit.love">info@carit.love</a></h2>
-   </main>
-   <nav class="footer">
-    <div>
-        <a href="../">Volver</a>
-        <p>|</p>
-        <a href="../privacy/">Política de Privacidad</a>
-        <p>|</p>
-        <a href="../conditions/">Condiciones de Uso</a>
+<body>
+    <main>
+        <div class="content">
+            <h1>Ayuda</h1>
+
+
+
+            <h2>¿Qué es Carit?</h2>
+            <p>Carit es una aplicación especializada en brindar asesoramiento amoroso y consejos románticos. Te ayuda a
+                mejorar tus relaciones y resolver problemas de pareja.</p>
+
+            <h2>¿Cómo descargar Carit?</h2>
+            <p>Puedes descargar Carit desde la página principal:</p>
+            <a href="../">Volver a la página principal</a>
+
+            <h2>¿Cuáles son los beneficios de usar Carit?</h2>
+            <p>Algunos de los beneficios de usar Carit incluyen:</p>
+            <ul>
+                <li>Consejos románticos personalizados según tus necesidades.</li>
+                <li>Asesoramiento amoroso de expertos en relaciones.</li>
+                <li>Recursos para mejorar la comunicación en pareja.</li>
+                <li>Herramientas para resolver conflictos y fortalecer la relación.</li>
+            </ul>
+
+            <h2>¿Cómo puedo contactar al equipo de Carit?</h2>
+            <p>Puedes ponerte en contacto con el equipo de Carit a través de <a href="mailto:info@carit.love">info@carit.love</a>.</p>
+            <p>Para eliminar tu cuenta y datos escribenos a <a href="mailto:info@carit.love">info@carit.love</a></p>
+    </main>
     </div>
-   </nav>
+    <nav class="footer">
+        <div>
+            <a href="../">Volver</a>
+            <p>|</p>
+            <a href="../privacy/">Política de Privacidad</a>
+            <p>|</p>
+            <a href="../conditions/">Condiciones de Uso</a>
+        </div>
+    </nav>
 </body>
+
 </html>
