--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="./favicon.png">
     <link rel="stylesheet" href="./main.css">
-    <title>Carit | ¡La revolución amorosa que cambiará tu vida!</title>
+    <title>Carit | Consejos románticos y asesoramiento amoroso</title>
     <meta name="description" content="Obtén los mejores consejos románticos con Carit, la aplicación especializada en brindar asesoramiento amoroso. Descubre cómo mejorar tus relaciones y conquistar a tu pareja. ¡Descarga la app ahora!">
     <meta name="keywords" content="Carit, consejos románticos, asesoramiento amoroso, app de consejos de amor, relaciones, conquistar pareja">
     <meta name="language" content="Spanish">
@@ -15,7 +15,7 @@
     <meta name="author" content="Carit">
     <meta property="og:title" content="Carit | ¡La revolución amorosa que cambiará tu vida!">
     <meta property="og:description" content="Obtén los mejores consejos románticos con Carit, la aplicación especializada en brindar asesoramiento amoroso. Descubre cómo mejorar tus relaciones y conquistar a tu pareja. ¡Descarga la app ahora!">
-    <meta property="og:image" content="https://carit.love/logo.png">
+    <meta property="og:image" content="https://carit.love/favicon.png">
     <meta property="og:url" content="https://carit.love/">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary">
@@ -26,11 +26,12 @@
 
 <body>
     <main class="hero">
-        <img class="logo" src="logo.png" alt="Carit | ¡La revolución amorosa que cambiará tu vida para siempre!">
+        <img class="logo" src="logo.png" alt="Carit ayuda amorosa, relaciones y problemas de parejas, asistente de relaciones ai ia inteligencia artificial">
         <div>
-            <a target="_blank" href="https://play.google.com/store/apps/details?com.juantorrens.carit"><img width="20px" class="appicon" src="google-play.svg" alt="Download Carit Google Play Android"></a>
-            <a target="_blank" href="https://forms.gle/HjRFYsz8qsAheEFW7"><img width="20px" class="appicon" src="apple.svg" alt="Download Carit App Store Apple"></a>
+            <a target="_blank" href="https://play.google.com/store/apps/details?com.juantorrens.carit"><img width="20px" class="appicon" src="google-play.svg" alt="Download Descargar Carit Play Android"></a>
+            <a target="_blank" href="https://forms.gle/HjRFYsz8qsAheEFW7"><img width="20px" class="appicon" src="apple.svg" alt="Carit ayuda amorosa y de relaciones"></a>
         </div>
+        <h1>Carit asistente amoroso, romantico, relaciones y problemas de pareja</h1>
     </main>
     <nav class="footer">
         <div>
