--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./main.css">
     <title>Carit | Consejos románticos y asesoramiento amoroso</title>
     <link rel="sitemap" type="application/xml" href="./sitemap.xml">
+    <link rel="sitemap" type="application/xml" href="./sitemap.es.xml">
     <link rel="robots" type="text/plain" href="/robots.txt">
     <meta name="description" content="Obtén los mejores consejos románticos con Carit, la aplicación especializada en brindar asesoramiento amoroso. Descubre cómo mejorar tus relaciones y conquistar a tu pareja. ¡Descarga la app ahora!">
     <meta name="keywords" content="Carit, consejos románticos, asesoramiento amoroso, app de consejos de amor, relaciones, conquistar pareja">
