--- a/conditions/index.html
+++ b/conditions/index.html
@@ -15,7 +15,47 @@
     <main>
         <div class="content">
             <h1>Condiciones de Uso de Carit</h1>
-            <h2>En construccion</h2>
+
+            <h2>1. Aceptación de los términos</h2>
+            <p>Al utilizar el asistente de IA Carit, aceptas cumplir con los siguientes términos y condiciones de uso.
+                Si no estás de acuerdo con estos términos, por favor, no utilices la aplicación.</p>
+
+            <h2>2. Uso personal</h2>
+            <p>Carit es un asistente de IA diseñado para brindar consejos y orientación en temas de amor. El uso de
+                Carit está destinado únicamente para fines personales y no debe utilizarse como sustituto de
+                asesoramiento profesional o terapéutico.</p>
+
+            <h2>3. Pagos y suscripciones</h2>
+            <p>La aplicación Carit utiliza pagos integrados en la aplicación (IAP) para acceder a determinadas funciones
+                o servicios adicionales. Al realizar una compra a través de IAP, aceptas los términos y condiciones de
+                la plataforma de distribución correspondiente (por ejemplo, App Store de Apple o Google Play Store) y
+                comprendes que los pagos son no reembolsables.</p>
+
+            <h2>4. Responsabilidad del usuario</h2>
+            <p>Eres responsable de la forma en que utilizas Carit y de asegurarte de que cumplas con todas las leyes y
+                regulaciones aplicables. No debes utilizar Carit para ningún propósito ilegal, fraudulento o que
+                infrinja los derechos de terceros.</p>
+
+            <h2>5. Uso adecuado</h2>
+            <p>Carit es una herramienta diseñada para proporcionar consejos y orientación en temas de amor. No debes
+                utilizar Carit para difamar, acosar, discriminar o dañar a otros de ninguna manera. Además, no debes
+                utilizar Carit para compartir contenido inapropiado, ofensivo o ilegal.</p>
+
+            <h2>6. Modificaciones y actualizaciones</h2>
+            <p>Nos reservamos el derecho de realizar modificaciones o actualizaciones en Carit en cualquier momento,
+                incluyendo cambios en las funciones, disponibilidad o términos y condiciones. Te notificaremos sobre
+                cualquier cambio importante y, si no estás de acuerdo con dichos cambios, podrás dejar de utilizar
+                Carit.</p>
+
+            <h2>7. Limitación de responsabilidad</h2>
+            <p>Carit se proporciona "tal cual" y no ofrecemos garantías de ningún tipo, ya sean explícitas o implícitas,
+                incluyendo, pero no limitado a, garantías de comerciabilidad, idoneidad para un propósito particular y
+                no infracción. No nos hacemos responsables de ningún daño directo, indirecto, incidental, especial o
+                consecuente que pueda surgir del uso de Carit.</p>
+
+            <h2>8. Terminación del acceso</h2>
+            <p>Nos reservamos el derecho de terminar o suspender tu acceso a Carit en cualquier momento y por cualquier
+                motivo, incluyendo, pero no limitado a,violaciones de estos términos y condiciones.</p>
     </main>
     </div>
     <nav class="footer">
