--- a/conditions/index.html
+++ b/conditions/index.html
@@ -64,6 +64,8 @@
             <p>|</p>
             <a href="../help/">Ayuda</a>
             <p>|</p>
+            <a href="https://forms.gle/r5EEpQM1sKphqoma8" target="_blank">Afiliados</a>
+            <p>|</p>
             <a href="../privacy/">Política de Privacidad</a>
         </div>
     </nav>
