--- a/privacy/index.html
+++ b/privacy/index.html
@@ -113,6 +113,8 @@
             <p>|</p>
             <a href="../help/">Ayuda</a>
             <p>|</p>
+            <a href="https://forms.gle/r5EEpQM1sKphqoma8" target="_blank">Afiliados</a>
+            <p>|</p>
             <a href="../conditions/">Condiciones de Uso</a>
         </div>
     </nav>
