--- a/help/index.html
+++ b/help/index.html
@@ -46,6 +46,8 @@
             <p>|</p>
             <a href="../privacy/">Política de Privacidad</a>
             <p>|</p>
+            <a href="https://forms.gle/r5EEpQM1sKphqoma8" target="_blank">Afiliados</a>
+            <p>|</p>
             <a href="../conditions/">Condiciones de Uso</a>
         </div>
     </nav>
