--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
             <p>|</p>
             <a href="./conditions/">Condiciones de Uso</a>
             <p>|</p>
+            <a href="https://forms.gle/r5EEpQM1sKphqoma8" target="_blank">Afiliados</a>
+            <p>|</p>
             <a href="./help/">Ayuda</a>
         </div>
     </nav>
