--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 
 <body>
     <main class="hero">
-        <img class="logo" src="logo.png" alt="Carit ayuda amorosa, relaciones y problemas de parejas, asistente de relaciones ia inteligencia artificial">
+        <img class="logo" src="logo.png" alt="Carit ayuda amor, amorosa, relaciones y problemas de parejas, asistente de relaciones ia inteligencia artificial">
         <div> 
             <a target="_blank" href="https://play.google.com/store/apps/details?com.juantorrens.carit"><img width="20px" class="appicon" src="google-play.svg" alt="Download Descargar Carit Play Android"></a>
             <a target="_blank" href="https://forms.gle/HjRFYsz8qsAheEFW7"><img width="20px" class="appicon" src="apple.svg" alt="Carit ayuda amorosa y de relaciones"></a>
         </div>
-        <h1>Carit asistente amoroso, amor, romantico, relaciones y problemas de pareja</h1>
+        <h1>Carit asistente amor amoroso romantico relaciones y problemas de pareja</h1>
     </main>
     <nav class="footer">
         <div>
