--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Carit | ¡La revolución amorosa que cambiará tu vida!">
-    <meta name="twitter:description" content="Obtén los mejores consejos románticos con Carit, la aplicación especializada en brindar asesoramiento amoroso. Descubre cómo mejorar tus relaciones y conquistar a tu pareja. ¡Descarga la app ahora!">
+    <meta name="twitter:description" content="Obtén los mejores consejos románticos con Carit, la aplicación especializada en amor. Descubre cómo mejorar tus relaciones y conquistar a tu pareja. ¡Descarga la app ahora!">
     <meta name="twitter:image" content="https://carit.love/logo.png">    
 </head>
 
