--- a/landing/index.html
+++ b/landing/index.html
@@ -82,7 +82,7 @@
     const analytics = getAnalytics(app);
 
     function sendAnalytics(platform) {
-        logEvent(analytics, 'sign_up', { platform });
+        logEvent(analytics, 'download', { platform });
     }
 
     function checkFirstVisit() {
