--- a/landing/index.html
+++ b/landing/index.html
@@ -81,7 +81,7 @@
     const app = initializeApp(firebaseConfig);
     const analytics = getAnalytics(app);
 
-    function sendAnalytics(platform) {
+    window.sendAnalytics = function sendAnalytics(platform) {
         logEvent(analytics, `${platform}download`);
     }
 
@@ -105,16 +105,18 @@
     }
 
     checkFirstVisit();
+</script>
 
-    const androidLink = document.querySelector('#android-link');
-    const appleLink = document.querySelector('#apple-link');
+<script>
+    const androidLink = window.document.querySelector('#android-link');
+    const appleLink = window.document.querySelector('#apple-link');
 
     androidLink.addEventListener('click', () => {
-        sendAnalytics('android');
+        window.sendAnalytics('android');
     });
 
     appleLink.addEventListener('click', () => {
-        sendAnalytics('apple');
+        window.sendAnalytics('apple');
     });
 </script>
 
