--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main class="hero">
         <img class="logo" src="logo.png" alt="Carit ayuda amor, amorosa, relaciones y problemas de parejas, asistente de relaciones ia inteligencia artificial">
         <div> 
-            <a target="_blank" href="https://play.google.com/store/apps/details?com.juantorrens.carit"><img width="20px" class="appicon" src="google-play.svg" alt="Download Descargar Carit Play Android"></a>
+            <a target="_blank" href="https://play.google.com/store/apps/details?id=com.juangarcia.carit"><img width="20px" class="appicon" src="google-play.svg" alt="Download Descargar Carit Play Android"></a>
             <a target="_blank" href="https://forms.gle/HjRFYsz8qsAheEFW7"><img width="20px" class="appicon" src="apple.svg" alt="Carit ayuda amorosa y de relaciones"></a>
         </div>
         <h1>Carit asistente amor amoroso romantico relaciones y problemas de pareja</h1>
