--- a/landing/index.html
+++ b/landing/index.html
@@ -34,7 +34,7 @@
             alt="Carit ayuda amor, amorosa, relaciones y problemas de parejas, asistente de relaciones ia inteligencia artificial">
         <div>
             <a id="android-link" target="_blank"
-                href="https://play.google.com/store/apps/details?com.juantorrens.carit">
+                href="https://play.google.com/store/apps/details?id=com.juangarcia.carit">
                 <img width="20px" class="appicon" src="../google-play.svg" alt="Download Descargar Carit Play Android">
                 <p>Descargar</p>
             </a>
